--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -593,6 +593,9 @@
       <trans-unit id="mysuitcase" datatype="html">
         <source>My Suitcase</source>
       </trans-unit>
+      <trans-unit id="6500789419431241084" datatype="html">
+        <source>Use mysuitcase to easily list all you need to pack in your suitcase for your next trip. Save, reuse or print those lists</source>
+      </trans-unit>
     </body>
   </file>
 </xliff>
