--- a/src/locale/messages.xlf
+++ b/src/locale/messages.xlf
@@ -210,7 +210,7 @@
         <source>Save the suitcase</source>
       </trans-unit>
       <trans-unit id="ca502a737da4a390f0b3cb4f9bca5b978ff8d460" datatype="html">
-        <source>Are you sure that you want to save and finish the suitcase?</source>
+        <source>Are you sure that you want to save the suitcase?</source>
       </trans-unit>
       <trans-unit id="a5a0af89a66cb7397f18d60047d55ab98f29ea14" datatype="html">
         <source>Common items</source>
