--- a/src/locale/messages.fr.xlf
+++ b/src/locale/messages.fr.xlf
@@ -261,9 +261,9 @@
         <source>Save the suitcase</source>
         <target>Guardar la maleta</target>
       </trans-unit>
-      <trans-unit id="ca502a737da4a390f0b3cb4f9bca5b978ff8d460" datatype="html">
+      <trans-unit id="7f15a967d17169112f376df8e730407ba8c62ab6" datatype="html">
         <source>Are you sure that you want to save the suitcase?</source>
-        <target>¿Estás seguro que quieres guardar y finalizar la maleta?</target>
+        <target state="new">¿Estás seguro que quieres guardar y finalizar la maleta?</target>
       </trans-unit>
       <trans-unit id="a5a0af89a66cb7397f18d60047d55ab98f29ea14" datatype="html">
         <source>Common items</source>
